--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,11 @@ edition = "2024"
 
 [dependencies]
 bevy = "0.16.0"
+
+# Enable small optimizations for local code
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies
+[profile.dev.package."*"]
+opt-level = 3
