--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 avian2d = "0.3.1"
 bevy = "0.16.0"
+rand = "0.9.1"
 round-to = "0.1.5"
 
 # Enable small optimizations for local code
