--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 avian2d = "0.3.1"
-bevy = "0.16.0"
+bevy = { version = "0.16.0", features = ["bmp"] }
 round-to = "0.1.5"
 
 # Enable small optimizations for local code
